--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Tanthammar\\TallDataTable\\Providers\\TallDataTableServiceProvider"
+                "Tanthammar\\TallDataTable\\TallDataTableServiceProvider"
             ]
         }
     }
